--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
             </div>
 
-            <h2 id="foto">Fotos do jogo</h2>
+            <h2 id="foto" class="texto2">Fotos do jogo</h2>
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
